# SFML-Setup

./: .gitignore  CMakeLists.txt  Checklist.txt  README.md  conanfile.py
src/: main.cpp
src/collision/: collider.cpp  collider.h
src/components/: helper_methods.h
src/components/collision/: collider.cpp  collider.h
src/components/steering_behaviours/: steering_behaviours.cpp  steering_behaviours.h
src/game/: game.cpp  game.h
src/game_objects/: game_object.cpp  game_object.h
src/game_objects/enemy/: enemy.cpp  enemy.h
src/game_objects/obstacle/: obstacle.cpp  obstacle.h
src/game_objects/player/: player.cpp  player.h  raycast.cpp  raycast.h
src/helpers/: helper_methods.h  parameters.h
